better fix for parallax and header-overlap

--- a/styles/banner.less
+++ b/styles/banner.less
@@ -25,7 +25,6 @@
   .blocks {
     position: relative;
     z-index: 1;
-    overflow: hidden;
 
     .sqs-block:last-child {
       padding-bottom: 0 !important;
@@ -36,7 +35,6 @@
   .description:not([data-display*=overlaid]) {
     position: relative;
     z-index: 1;
-    overflow: hidden;
   }
 }
 
